something about proj_1