@@ -1,6 +1,7 @@
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Properties;
 import java.sql.*;
@@ -56,7 +57,7 @@ public class Loader2Connect {
 
     private static List<String> loadTXTFile() {
         try {
-            return Files.readAllLines(Path.of("resources/movies.txt"));
+            return Files.readAllLines(Paths.get("resources/movies.txt"));
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
