@@ -1,9 +1,14 @@
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Properties;
 import java.sql.*;
+/*
+执行commit语句时，才一次性写入硬盘
+在缓冲区先写
+ */
 
 public class Loader4Transaction {
 
@@ -70,7 +75,7 @@ public class Loader4Transaction {
 
     private static List<String> loadTXTFile() {
         try {
-            return Files.readAllLines(Path.of("resources/movies.txt"));
+            return Files.readAllLines(Paths.get("resources/movies.txt"));
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
